--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
+header {
+  text-align: center;
+}
+
 .app-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
+}
+
+.sidebar > h3 {
+  text-align: center;
 }
 
 .main-content {
@@ -20,7 +28,7 @@
   background-color: antiquewhite;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 
