--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 header {
   text-align: center;
+  color: rgba(255, 255, 255, 0.87);
 }
 
 .app-container {
@@ -25,10 +26,11 @@ header {
 .sidebar {
   width: 240px;
   padding: 1rem;
-  background-color: antiquewhite;
+  background-color: rgba(250, 235, 215, 0.568);
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  border-radius: 10px;
 }
 
 
