--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,28 @@
-/* :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+:root {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background: #7C00CE;
+  background: -moz-linear-gradient(left, #7C00CE 0%, #A4283D 37%, #FFCF60 100%);
+  background: -webkit-linear-gradient(left, #7C00CE 0%, #A4283D 37%, #FFCF60 100%);
+  background: linear-gradient(to right, #7C00CE 0%, #A4283D 37%, #FFCF60 100%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} 
 
-body {
+/* body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  /* display: flex; */
+  /* place-items: center; */
+  /* min-width: 320px;
   min-height: 100vh;
-}
+} */ 
 
 h1 {
   font-size: 3.2em;
@@ -29,7 +32,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.5em 1em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -37,9 +40,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: #FFCF60;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -56,4 +61,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+} 
