--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ header {
 
 .sidebar > h3 {
   text-align: center;
+  margin-bottom: 0.5rem;
 }
 
 .main-content {
@@ -29,8 +30,8 @@ header {
   background-color: rgba(250, 235, 215, 0.568);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  border-radius: 10px;
+  gap: .5rem;
+  border-radius: 20px;
 }
 
 
