--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ header {
 .app-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .sidebar > h3 {
