--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,31 @@ header {
   background-color: rgba(251, 255, 148, 0.314);
   border-radius: 10px;
   color: antiquewhite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  position: relative;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.filter-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
 
 .sidebar {
   width: 240px;
