--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,30 @@ header {
   justify-content: center;
 }
 
+.dropdown-content {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  min-width: 160px;
+  /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
+  border-radius: 8px;
+  z-index: 1;
+  overflow: hidden;
+  font-size: 1rem;
+}
 
+.dropdown-content button {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  /* border: none; */
+  cursor: pointer;
+}
+
+.dropdown-content button:hover {
+  color: black;
+  background-color: antiquewhite;
+}
 
 .sidebar {
   width: 240px;
