--- a/src/App.css
+++ b/src/App.css
@@ -68,10 +68,10 @@ header {
 }
 
 .dropdown-content button {
-  padding: 12px 16px;
+  padding: 8px 12px;
   text-decoration: none;
+  font-size: .9rem;
   display: block;
-  /* border: none; */
   cursor: pointer;
 }
 
