--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,14 +1,20 @@
 
 .card-message {
   list-style-type: none;
+  text-align: center;
+  grid-row: 2 / 3;
+  grid-column: 1 / 5;
 } 
 
 .card-item {
-  background-color: rgba(255, 235, 205, 0.514);
-  border-radius: 10px;
+  background-color: rgb(238, 171, 212);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.629);
   padding: 1rem;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto 6vh;
+  width: 200px;
+  aspect-ratio: 1 / 1;
 }
 
 .button-area {
@@ -23,4 +29,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.card-item > button {
+  padding: 0px;
+  justify-content: center;
+  align-items: center;
+}
+
+#like {
+  grid-row: 3 / 4;
+  grid-column: 1 / 2;
+}
+
+#delete {
+  grid-row: 3 / 4;
+  grid-column: 4 / 5;
+}
+
+#likes-message {
+  text-align: center;
+  grid-row: 3 / 4;
+  grid-column: 2 / 4;
 }
