--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,7 +4,7 @@
 } 
 
 .card-item {
-  background-color: rgba(255, 235, 205, 0.514);
+  /* background-color: rgba(255, 235, 205, 0.514); */
   border-radius: 10px;
   padding: 1rem;
   display: flex;
