--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+
 header {
   text-align: center;
   color: rgba(255, 255, 255, 0.87);
@@ -43,33 +45,33 @@ header {
   z-index: 2;
 }
 
-.card-area > h1 {
-  text-align: center;
-  margin-top: 0;
-  border-radius: 10px;
-  color: antiquewhite;
+.title-container {
+  background-image: url('assets/tape.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  position: relative;
+  font-family: "Shadows Into Light", cursive;
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .filter-button {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  border: none;
   font-size: 1.2rem;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
+  background-color: rgb(129, 137, 163);
 }
 
 .dropdown-content {
@@ -94,8 +96,7 @@ header {
 
 .dropdown-content button:hover {
   color: black;
-  background-color: antiquewhite;
-}
+  background-color: rgb(215, 216, 250);}
 
 .sidebar {
   width: 240px;
