--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -44,3 +44,19 @@
   grid-row: 3 / 4;
   grid-column: 2 / 4;
 }
+
+.image-container {
+  grid-row: 1 / 2;
+  grid-column: 1 / 5;
+}
+
+.image-container img {
+  border-radius: 10px;
+  width: auto;
+  max-width: 150px;
+  height: auto;
+  max-height: 100px;
+  display: block;
+  margin: auto;
+  width: 50%;
+}
