--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,23 @@ header {
   /* text-align: center; */
   color: rgba(255, 255, 255, 0.87);
   font-family: "Fredoka";
+  display: grid;
+  grid-template-columns: 550px auto;
+  grid-template-rows: auto auto;
+}
+
+header h1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  margin: 0px;
+}
+
+header h2 {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  place-self: center;
+  margin: 0px;
+  margin-bottom: 20px;
 }
 
 h1 img {
